--- a/Consola/Consola.csproj
+++ b/Consola/Consola.csproj
@@ -6,7 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Ficha6\Ficha6.csproj" />
+    <ProjectReference Include="..\ClassLibrary1\Ficha14.csproj" />
+    <ProjectReference Include="..\Exercicio16\Ficha16.csproj" />
+    <ProjectReference Include="..\Ficha13solucao\Ficha13.csproj" />
+    <ProjectReference Include="..\Ficha15\Ficha15.csproj" />
+    <ProjectReference Include="..\Ficha17\Ficha17.csproj" />
+    <ProjectReference Include="..\Ficha6\Ficha10.csproj" />
     <ProjectReference Include="..\Ficha7\Ficha11.csproj" />
     <ProjectReference Include="..\Ficha9\Ficha12.csproj" />
   </ItemGroup>
