--- a/Consola/Consola.csproj
+++ b/Consola/Consola.csproj
@@ -11,6 +11,8 @@
     <ProjectReference Include="..\Ficha13solucao\Ficha13.csproj" />
     <ProjectReference Include="..\Ficha15\Ficha15.csproj" />
     <ProjectReference Include="..\Ficha17\Ficha17.csproj" />
+    <ProjectReference Include="..\Ficha24\Ficha24.csproj" />
+    <ProjectReference Include="..\Ficha25\Ficha25.csproj" />
     <ProjectReference Include="..\Ficha6\Ficha10.csproj" />
     <ProjectReference Include="..\Ficha7\Ficha11.csproj" />
     <ProjectReference Include="..\Ficha9\Ficha12.csproj" />
