--- a/Consola/Consola.csproj
+++ b/Consola/Consola.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\Ficha13solucao\Ficha13.csproj" />
     <ProjectReference Include="..\Ficha15\Ficha15.csproj" />
     <ProjectReference Include="..\Ficha17\Ficha17.csproj" />
+    <ProjectReference Include="..\Ficha18\Ficha18.csproj" />
     <ProjectReference Include="..\Ficha24\Ficha24.csproj" />
     <ProjectReference Include="..\Ficha25\Ficha25.csproj" />
     <ProjectReference Include="..\Ficha6\Ficha10.csproj" />
