--- a/Consola/Consola.csproj
+++ b/Consola/Consola.csproj
@@ -12,6 +12,8 @@
     <ProjectReference Include="..\Ficha15\Ficha15.csproj" />
     <ProjectReference Include="..\Ficha17\Ficha17.csproj" />
     <ProjectReference Include="..\Ficha18\Ficha18.csproj" />
+    <ProjectReference Include="..\Ficha19\Ficha19.csproj" />
+    <ProjectReference Include="..\Ficha20\Ficha20.csproj" />
     <ProjectReference Include="..\Ficha24\Ficha24.csproj" />
     <ProjectReference Include="..\Ficha25\Ficha25.csproj" />
     <ProjectReference Include="..\Ficha6\Ficha10.csproj" />
